# oncoflow

./: .dockerignore  .gitignore  AGENTS.md  DigHacktion_NB.ipynb  HOW-TO-CONTRIBUTE.md  Modelfile  Modelfile_LLM  RAGTest.ipynb  RAGTest_Ollama.ipynb  RAG_TNCD.ipynb  RAG_final.ipynb  README.md  dive_0.12.0_linux_amd64.deb  generate.py  generate_rcp copy.py  generate_rcp.py  main.py  requirements.txt  template.json  test.docx  test_ocr.ipynb  ~$test.docx
.github/: dependabot.yml
application/: .dockerignore  .pre-commit-config.yaml  AGENTS.md  app-ui.py  app.py  main.py  pyproject.toml  requirements-ui-uv.txt  requirements-ui.txt  requirements.txt
application/ressources/PatientMDTOncologicForm/: PDF1.pdf.bbox
application/ressources/TNCD/: .gitignore
application/scratch/: test_dir.py
application/src/application/: app_functions.py  config.py  llm.py  patient_mdt_oncologic.py  reader.py  ressources.py  tools.py
application/src/application/agent/: agent.py  collaborate.py  reflection_graph.py  test_agent.py  tools.py
application/src/application/tests/: test_app_functions.py  test_config.py  test_patient_mdt_oncologic.py  test_reader.py  test_tools.py
application/src/domain/: agent_mdt_oncologic_form.py  agents.py  common_ressources.py  interfaces.py  patient_mdt_form.py  patient_mdt_oncologic_form.py
application/src/domain/common/: agents.py  common_ressources.py  patient_mdt_common_form.py
application/src/domain/oncology/: agents.py  patient_mdt_oncologic_form.py
application/src/domain/patient_mdt_oncologic/: patient_mdt_oncologic_form.py
application/src/domain/sma/: agents.py  patient_mdt_sma_form.py
application/src/domain/tests/: test_agents.py  test_common_ressources.py  test_interfaces.py
application/src/infrastructure/documents/: mongodb.py
application/src/infrastructure/llm/: base.py  factory.py  litellm.py  llamacpp.py  ollama.py  openai.py  vllm.py
application/src/infrastructure/parsers/: ollama_ocr.py  openparse.py
application/src/infrastructure/vectorial/: chromadb.py  client.py  database.py  milvus.py  mongodb.py
application/src/ui/patient_mdt_oncologic/: agents.py  cards.py  datas.py  ressources.py  translations.py  upload.py
application/tests/: conftest.py  test_agent.py  test_collaborative_debate.py  test_litellm.py  test_llamacpp.py  test_mongodb.py  test_ollama.py  test_openai.py  test_parsers.py  test_ressources.py  test_tools.py  test_vectorial.py  test_vllm.py
(+109 files in other folders)
