[project]
name = "application"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blinker>=1.9.0",
    "chromadb>=1.3.5",
    "docling-core[chunking]>=2.77.0",
    "environ-config>=24.1.0",
    "inquirer>=3.4.1",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-docling>=2.0.0",
    "langchain-experimental>=0.4.2",
    "langchain-milvus==0.3.3",
    "langchain-mongodb>=0.11.0",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=0.1.0",
    "langchain-litellm>=0.1.0",
    "openai>=1.0.0",
    "modelscope>=1.37.1",
    "ollama-ocr>=0.1.6",
    "openparse>=0.7.0",
    "panda>=0.3.1",
    "pdfminer-six>=20260107",
    "pymilvus==2.6.4",
    "pymongo>=4.17.0",
    "pymupdf>=1.27.2.3",
    "python-slugify>=8.0.4",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.57.0",
    "streamlit-authenticator>=0.4.2",
    "streamlit-pdf-viewer>=0.0.29",
    "unstructured[pdf]>=0.22.30",
    "uuid>=1.30",
    "pytz>=2026.2",
    "protobuf<7.0.0",
    "langchain>=1.3.4",
]

[dependency-groups]
dev = [
  "pytest >=8.1.1,<9",
  "ruff",
  "pre-commit",
  "pyrefly"
]

[tool.pyright]
autoSearchPaths = false
extraPaths = ["."]

[tool.ruff.lint.per-file-ignores]
"app-ui.py" = ["E402"]
"app.py" = ["E402"]
